data/derived/comb/progs/unify/prog6098.ml.out
Characters 84-85:
  | h::tl -> if ( List.hd y = h) then 1;;
                                      ^
Error: This expression has type int but an expression was expected of type
         unit
